--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
     </table>
     <table id="main">
         <td>
+            <!--ToDoList기능 구현-->
             아직 아무것도 없네요...
             <button>생성</button>
+        </td>
+        <td id="chatting">
+            <!--채팅창 코드 넣는 곳-->
+
         </td>
     </table>
 </body>
