--- a/start.html
+++ b/start.html
@@ -4,14 +4,9 @@
 <head>
     <title>Start_ToDoList</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        body{
-            background-color: lavenderblush;
-        }
-    </style>
+    <link rel="stylesheet" href="start.css">
 </head>
 
 <body>
