--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <tbody>
             <td class="loginForm">
                 <form action="">
-                    <input type="id">
-                    <input type="password">
+                    ID : <input type="id">
+                    PASSWORD : <input type="password">
                 </form>
             </td>
             <tr>
@@ -26,7 +26,34 @@
         </tbody>
         <tfoot>
             <tr>
-                <td id="chat" colspan="5" align="center">Chatting</td>
+                <td id="chat" colspan="5" align="center"><!--채팅창 코드 넣는 곳-->
+                    <script>
+                        id = "dsq-count-scr"
+                        src = "//dgswtodolist.disqus.com/count.js"
+                        async >
+                    </script>
+                    <div id="disqus_thread"></div>
+                    <script>
+                        /**
+                         *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+                         *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
+                        /*
+                        var disqus_config = function () {
+                        this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+                        this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+                        };
+                        */
+                        (function () { // DON'T EDIT BELOW THIS LINE
+                            var d = document,
+                                s = d.createElement('script');
+                            s.src = 'https://dgswtodolist.disqus.com/embed.js';
+                            s.setAttribute('data-timestamp', +new Date());
+                            (d.head || d.body).appendChild(s);
+                        })();
+                    </script>
+                    <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments
+                            powered
+                            by Disqus.</a></noscript></td>
             </tr>
         </tfoot>
     </table>
