--- a/index.html
+++ b/index.html
@@ -13,21 +13,18 @@
             </tr>
         </thead>
         <tbody>
-            <td class="loginForm">
-                <form action="">
-                    ID : <input type="id">
-                    PASSWORD : <input type="password">
-                </form>
-            </td>
+            
             <tr>
                 <td class="main" align="center">main</td>
-                <td class="sideView">sideView</td>
+                <td class="sideView">MeMo<br>
+                    <textarea name="" id="memo" cols="30" rows="50"></textarea>
+                </td>
             </tr>
         </tbody>
         <tfoot>
             <tr>
                 <td id="chat" colspan="5" align="center">이곳에 채팅창 코드를 넣어주세요</td><!--채팅창 코드 넣는 곳-->
-            </tr>
+            </tr> 
         </tfoot>
     </table>
 </body>
