--- a/start.html
+++ b/start.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <table id="start" border="1" align="center">
+    <p><img src="dgswhs.jpg" alt="대구소프트웨어마이스터고등학교 마크"></p>
+    <table id="start" border="0" align="center">
         <tr>
             <td>
                 <form action="index.html" method="">
