--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
                 <td id="headLine" colspan="5" align="center"><strong>To Do List</strong></td>
             </tr>
         </thead>
+
         <tbody>
+            <p><a href="http://www.dgsw.hs.kr/index.do" target="_blank" title="대구소프트웨어마이스터고등학교 홈페이지로 이동합니다."><img src="dgswhs.jpg"
+                        alt="대구소프트웨어마이스터고등학교 마크"> </li>
+            </p>
             <td class="loginForm">
                 <form action="">
                     ID : <input type="id">
@@ -23,7 +27,6 @@
                 <td class="main" align="center">main</td>
                 <td class="sideView">MeMo<br>
                     <textarea name="" id="memo" cols="30" rows="50"></textarea>
-                </td>
             </tr>
         </tbody>
         <tfoot>
