--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <tbody>
             <p><a href="http://www.dgsw.hs.kr/index.do" target="_blank" title="대구소프트웨어마이스터고등학교 홈페이지로 이동합니다."><img src="dgswhs.jpg"
-                        alt="대구소프트웨어마이스터고등학교 마크"> </li>
+                        alt="대구소프트웨어마이스터고등학교 마크"></a></li>
             </p>
             <tr>
                 <td class="main" align="center">main</td>
