--- a/start.html
+++ b/start.html
@@ -11,7 +11,7 @@
 
 <body>
     <p><a href="http://www.dgsw.hs.kr/index.do" target="_blank" title="대구소프트웨어마이스터고등학교 홈페이지로 이동합니다."><img
-                src="dgswhs.jpg" alt="대구소프트웨어마이스터고등학교 마크"><</p>
+                src="dgswhs.jpg" alt="대구소프트웨어마이스터고등학교 마크"></a></p>
     <table id="start" border="0" align="center">
         <tr>
             <td>
