--- a/index.html
+++ b/index.html
@@ -18,7 +18,16 @@
                         alt="대구소프트웨어마이스터고등학교 마크"></a></li>
             </p>
             <tr>
-                <td class="main" align="center">main</td>
+                <td class="main" align="center">
+                  <table class="hi">
+                    <tr>
+                      <td>안녕하세요</td>
+                    </tr>
+                    <tr>
+                      <td>누구세요?</td>
+                    </tr>
+                  </table>
+                </td>
                 <td class="sideView">MeMo<br>
                     <textarea name="" id="memo" cols="30" rows="50"></textarea>
             </tr>
@@ -26,7 +35,7 @@
         <tfoot>
             <tr>
                 <td id="chat" colspan="5" align="center">이곳에 채팅창 코드를 넣어주세요</td><!--채팅창 코드 넣는 곳-->
-            </tr> 
+            </tr>
         </tfoot>
     </table>
 </body>
