--- a/index.html
+++ b/index.html
@@ -19,17 +19,18 @@
             </p>
             <tr>
                 <td class="main" align="center">
-                  <table class="hi">
+                  <table class="main_todo">
                     <tr>
-                      <td>안녕하세요</td>
-                    </tr>
-                    <tr>
-                      <td>누구세요?</td>
+                        <td>
+                            <!--Memo에서 제출을 누르면 테이블에 그 내용을 추가하는 기능을 만들것임-->
+                        </td>
                     </tr>
                   </table>
                 </td>
                 <td class="sideView">MeMo<br>
-                    <textarea name="" id="memo" cols="30" rows="50"></textarea>
+                    <input type="text" placeholder="제목을 입력하세요"><br>
+                    <textarea name="" id="memo" cols="40" rows="40" class="noresize" placeholder="내용을 입력하세요"></textarea><br>
+                    <button onclick="">To Do List 추가하기</button>
             </tr>
         </tbody>
         <tfoot>
@@ -38,6 +39,8 @@
             </tr>
         </tfoot>
     </table>
+    <a href="https://github.com/honglim001" target="_blank"><img src="깃허브.jpg" alt="" class="img"></a>
+    <a href="https://www.facebook.com/programmingHong/" target="_blank"><img src="facebook.jpg" alt="" class="img"></a>
 </body>
 
 
