--- a/index.html
+++ b/index.html
@@ -6,19 +6,19 @@
     <script src="func.js"></script>
     <script src="http://code.jquery.com/jquery-1.7.js"></script>
     <script>
-        function addTable() {
-            alert('테이블을 만듭니다.');
-            var head = document.getElementById('head').value;
-            var memo = document.getElementById('memo').value;
-            var tableData = '';
-            tableData += '<table class="main_todo" class="main_todo">';
-            tableData += '<tr>';
-            tableData += '<td>';
-            tableData += '<strong>'+head +'</strong>'+'<br>'+memo;
-            tableData += '<td>';
-            tableData += '<tr>';
-            tableData += '</table>';
-            $('.main').append(tableData);
+          function addTable() {
+              alert('테이블을 만듭니다.');
+              var head = document.getElementById('head').value;
+              var memo = document.getElementById('memo').value;
+              var tableData = '';
+              tableData += '<table class="main_todo" class="main_todo">';
+              tableData += '<tr>';
+              tableData += '<td>';
+              tableData += '<strong>'+head +'</strong>'+'<br>'+memo;
+              tableData += '<td>';
+              tableData += '<tr>';
+              tableData += '</table>';
+              $('.main').append(tableData);
         }
     </script>
 </head>
@@ -36,7 +36,7 @@
                         src="dgswhs.jpg" alt="대구소프트웨어마이스터고등학교 마크"></a></li>
             </p>
             <tr>
-                <td class="main" align="center">
+                <td class="main">
                 </td>
                 <td class="sideView">MeMo<br>
                     <input type="text" id="head" placeholder="제목을 입력하세요"><br>
@@ -52,8 +52,10 @@
             </tr>
         </tfoot>
     </table>
-    <a href="https://github.com/honglim001" target="_blank"><img src="깃허브.jpg" alt="" class="img"></a>
-    <a href="https://www.facebook.com/programmingHong/" target="_blank"><img src="facebook.jpg" alt="" class="img"></a>
+    <div class="bottom">
+      <a href="https://github.com/honglim001" target="_blank"><img src="깃허브.jpg" alt="" class="img"></a>
+      <a href="https://www.facebook.com/programmingHong/" target="_blank"><img src="facebook.jpg" alt="" class="img"></a>
+    </div>
 </body>
 
 
