--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <title>practice</title>
     <link rel="stylesheet" href="./main.css">
-    <script src="func.js"></script>
-    <script src="http://code.jquery.com/jquery-1.7.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
     <script>
         function addTable() { //테이블을 만드는 함수 
             var head = document.getElementById('head').value;
