--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             tableData += '<table class="main_todo" class="main_todo">';
             tableData += '<tr>';
             tableData += '<td>';
-            tableData += '<strong>' +cnt+head +'<br>'+'</strong>' + memo;
+            tableData += '<strong>' + cnt + head + '<br>' + '</strong>' + memo;
             tableData += '<td>';
             tableData += '<tr>';
             tableData += '</table>';
@@ -35,7 +35,7 @@
     <table class="frame">
         <thead>
             <tr>
-                <td id="headLine" colspan="5" align="center"><strong id="headLine">To Do List</strong></td>
+                <td id="headLine" colspan="5" align="center"><strong id="headLine">📝To Do List📝</strong></td>
             </tr>
         </thead>
 
@@ -59,15 +59,17 @@
         <tfoot>
             <tr>
                 <td id="chat" colspan="5" align="center" style="background-color: #6464FF;">
-                    <p>Maker's Facebook</p><a href="https://www.facebook.com/programmingHong/" target="_blank"><img
-                            src="facebook.jpg" alt="" class="img">홍준혁</a><br>
-                            <a href="https://www.facebook.com/profile.php?id=100016279240376" target="_blank"><img src="facebook.jpg" alt=""
-                            class="img">임재현</a><br>
-                            <a href="https://www.facebook.com/profile.php?id=100015302599102" target="_blank"><img src="facebook.jpg" alt="" class ="img">조민수</a>
+                    <p>Maker</p>홍준혁 : <a href="https://www.facebook.com/programmingHong/" target="_blank"><img
+                            src="facebook.jpg" alt="https://github.com/milky1234" class="img"><a href="" target="_blank"><img src="깃허브.jpg" class="img" alt="홍준혁"></a></a><br>
+                            임재현 : <a href="https://www.facebook.com/profile.php?id=100016279240376" target="_blank"><img
+                            src="facebook.jpg" alt="" class="img"><a href="https://github.com/limjh0513" target="_blank"><img src="깃허브.jpg" class="img" alt="임재현"></a></a><br>
+                            조민수 : <a href="https://www.facebook.com/profile.php?id=100015302599102" target="_blank"><img
+                            src="facebook.jpg" alt="" class="img"><a href="https://github.com/honglim001" target="_blank"><img src="깃허브.jpg" class="img" alt="조민수"></a></a>
+
             </tr>
         </tfoot>
     </table>
-    <a href="https://github.com/honglim001" target="_blank"><img src="깃허브.jpg" alt="" class="img"></a>
+    Organization Github:<a href="https://github.com/honglim001" target="_blank"><img src="깃허브.jpg" alt="" class="img"></a>
 </body>
 
 
