--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <td class="main">
                 </td>
 
-                <td class="sideView">MeMo<br>
+                <td class="sideView" ><strong style="color: ivory;">MeMo</strong><br>
                     <input type="text" id="head" placeholder="제목을 입력하세요"><br>
                     <textarea name="" id="memo" cols="40" rows="40" class="noresize"
                         placeholder="내용을 입력하세요"></textarea><br>
@@ -58,7 +58,7 @@
         </tbody>
         <tfoot>
             <tr>
-                <td id="chat" colspan="5" align="center" style="background-color: #6464FF;">
+                <td id="chat" colspan="5" align="center">
                     <p>Maker</p>홍준혁 : <a href="https://www.facebook.com/programmingHong/" target="_blank"><img
                             src="facebook.jpg" alt="https://github.com/milky1234" class="img"><a href="" target="_blank"><img src="깃허브.jpg" class="img" alt="홍준혁"></a></a><br>
                             임재현 : <a href="https://www.facebook.com/profile.php?id=100016279240376" target="_blank"><img
