--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             tableData += '<table class="main_todo" class="main_todo">';
             tableData += '<tr>';
             tableData += '<td>';
-            tableData += '<strong>' + cnt + head + '<br>' + '</strong>' + memo;
+            tableData += '<strong>'+ head + '<br>' + '</strong>' + memo;
             tableData += '<td>';
             tableData += '<tr>';
             tableData += '</table>';
@@ -41,7 +41,7 @@
 
         <tbody>
             <p><a href="http://www.dgsw.hs.kr/index.do" target="_blank" title="대구소프트웨어마이스터고등학교 홈페이지로 이동합니다."><img
-                        src="dgswhs.jpg" alt="대구소프트웨어마이스터고등학교 마크"></a></li>
+                        src="dgswhs.png" alt="대구소프트웨어마이스터고등학교 마크"></a></li>
             </p>
             <tr>
                 <td class="main">
@@ -64,7 +64,7 @@
                             임재현 : <a href="https://www.facebook.com/profile.php?id=100016279240376" target="_blank"><img
                             src="facebook.jpg" alt="" class="img"><a href="https://github.com/limjh0513" target="_blank"><img src="깃허브.jpg" class="img" alt="임재현"></a></a><br>
                             조민수 : <a href="https://www.facebook.com/profile.php?id=100015302599102" target="_blank"><img
-                            src="facebook.jpg" alt="" class="img"><a href="https://github.com/honglim001" target="_blank"><img src="깃허브.jpg" class="img" alt="조민수"></a></a>
+                            src="facebook.jpg" alt="" class="img"><a href="https://github.com/toswm128" target="_blank"><img src="깃허브.jpg" class="img" alt="조민수"></a></a>
 
             </tr>
         </tfoot>
