--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <tbody>
             <p><a href="http://www.dgsw.hs.kr/index.do" target="_blank" title="대구소프트웨어마이스터고등학교 홈페이지로 이동합니다."><img
-                        src="dgswhs.png" alt="대구소프트웨어마이스터고등학교 마크"></a></li>
+                        src="dgswhs.jpg" alt="대구소프트웨어마이스터고등학교 마크"></a></li>
             </p>
             <tr>
                 <td class="main">
