--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <tr>
                 <td id="chat" colspan="5" align="center">
                     <p>Maker</p>홍준혁 : <a href="https://www.facebook.com/programmingHong/" target="_blank"><img
-                            src="facebook.jpg" alt="https://github.com/milky1234" class="img"><a href="" target="_blank"><img src="깃허브.jpg" class="img" alt="홍준혁"></a></a><br>
+                            src="facebook.jpg" alt="" class="img"><a href="https://github.com/milky1234" target="_blank"><img src="깃허브.jpg" class="img" alt="홍준혁"></a></a><br>
                             임재현 : <a href="https://www.facebook.com/profile.php?id=100016279240376" target="_blank"><img
                             src="facebook.jpg" alt="" class="img"><a href="https://github.com/limjh0513" target="_blank"><img src="깃허브.jpg" class="img" alt="임재현"></a></a><br>
                             조민수 : <a href="https://www.facebook.com/profile.php?id=100015302599102" target="_blank"><img
